docs(spindle-ui): change documentation to Japanese

--- a/packages/spindle-ui/src/BottomButton/BottomButton.stories.mdx
+++ b/packages/spindle-ui/src/BottomButton/BottomButton.stories.mdx
@@ -28,7 +28,7 @@ import { BottomButton } from './BottomButton';
   <Story name="Fixed Position">
     <div style={{ ["--BottomButton-z-index"]: 2 }}>
       <BottomButton position="fixed">
-        <Button size="large" variant="contained" layout="fullWidth">fixed button</Button>
+        <Button size="large" variant="contained" layout="fullWidth">新規登録</Button>
       </BottomButton>
     </div>
   </Story>
@@ -37,7 +37,7 @@ import { BottomButton } from './BottomButton';
 <Source
   code={`
 <BottomButton position="fixed">
-  <Button size="large" variant="contained" layout="fullWidth">fixed button</Button>
+  <Button size="large" variant="contained" layout="fullWidth">新規登録</Button>
 </BottomButton>
   `}
 />
@@ -47,7 +47,7 @@ import { BottomButton } from './BottomButton';
   code={`
 <div class="spui-BottomButton spui-BottomButton--fixed">
   <div class="spui-BottomButton-wrap">
-    <button class="spui-Button spui-Button--large spui-Button--contained">fixed button</button>
+    <button class="spui-Button spui-Button--large spui-Button--contained">新規登録</button>
   </div>
 </div>
   `}
@@ -59,7 +59,7 @@ import { BottomButton } from './BottomButton';
 <Preview withSource="open">
   <Story name="Sticky Position">
     <BottomButton position="sticky">
-      <Button size="large" variant="contained" layout="fullWidth">sticky button</Button>
+      <Button size="large" variant="contained" layout="fullWidth">新規登録</Button>
     </BottomButton>
   </Story>
 </Preview>
@@ -67,7 +67,7 @@ import { BottomButton } from './BottomButton';
 <Source
   code={`
 <BottomButton position="sticky">
-  <Button size="large" variant="contained" layout="fullWidth">sticky button</Button>
+  <Button size="large" variant="contained" layout="fullWidth">新規登録</Button>
 </BottomButton>
   `}
 />
@@ -77,7 +77,7 @@ import { BottomButton } from './BottomButton';
   code={`
 <div class="spui-BottomButton spui-BottomButton--sticky">
   <div class="spui-BottomButton-wrap">
-    <button class="spui-Button spui-Button--fullWidth spui-Button--large spui-Button--contained">sticky button</button>
+    <button class="spui-Button spui-Button--fullWidth spui-Button--large spui-Button--contained">新規登録</button>
   </div>
 </div>
   `}
