--- a/packages/spindle-ui/src/ButtonGroup/ButtonGroup.stories.mdx
+++ b/packages/spindle-ui/src/ButtonGroup/ButtonGroup.stories.mdx
@@ -27,8 +27,8 @@ import { SubtleButton } from '../SubtleButton';
 <Preview withSource="open">
   <Story name="Row Direction with Large Buttons">
     <ButtonGroup direction="row" size="large">
-      <Button size="large" variant="contained">Contained</Button>
-      <Button size="large" variant="outlined">Outlined</Button>
+      <Button size="large" variant="contained">新規登録</Button>
+      <Button size="large" variant="outlined">ログイン</Button>
     </ButtonGroup>
   </Story>
 </Preview>
@@ -36,8 +36,8 @@ import { SubtleButton } from '../SubtleButton';
 <Source
   code={`
 <ButtonGroup direction="row" size="large">
-  <Button size="large" variant="contained">Contained</Button>
-  <Button size="large" variant="outlined">Outlined</Button>
+  <Button size="large" variant="contained">新規登録</Button>
+  <Button size="large" variant="outlined">ログイン</Button>
 </ButtonGroup>
   `}
 />
@@ -46,8 +46,8 @@ import { SubtleButton } from '../SubtleButton';
   language='html'
   code={`
 <div class="spui-ButtonGroup spui-ButtonGroup--row spui-ButtonGroup--large">
-  <button class="spui-Button spui-Button--large spui-Button--contained">Contained</button>
-  <button class="spui-Button spui-Button--large spui-Button--outlined">Outlined</button>
+  <button class="spui-Button spui-Button--large spui-Button--contained">新規登録</button>
+  <button class="spui-Button spui-Button--large spui-Button--outlined">ログイン</button>
 </div>
   `}
 />
@@ -57,8 +57,8 @@ import { SubtleButton } from '../SubtleButton';
 <Preview withSource="open">
   <Story name="Column Direction with Large Buttons">
     <ButtonGroup direction="column" size="large">
-      <Button variant="contained">Contained</Button>
-      <Button variant="outlined">Outlined</Button>
+      <Button variant="contained">新規登録</Button>
+      <Button variant="outlined">ログイン</Button>
     </ButtonGroup>
   </Story>
 </Preview>
@@ -66,8 +66,8 @@ import { SubtleButton } from '../SubtleButton';
 <Source
   code={`
 <ButtonGroup direction="column" size="large">
-  <Button size="large" variant="contained">Contained</Button>
-  <Button size="large" variant="outlined">Outlined</Button>
+  <Button size="large" variant="contained">新規登録</Button>
+  <Button size="large" variant="outlined">ログイン</Button>
 </ButtonGroup>
   `}
 />
@@ -76,8 +76,8 @@ import { SubtleButton } from '../SubtleButton';
   language='html'
   code={`
 <div class="spui-ButtonGroup spui-ButtonGroup--column spui-ButtonGroup--large">
-  <button class="spui-Button spui-Button--large spui-Button--contained">Contained</button>
-  <button class="spui-Button spui-Button--large spui-Button--outlined">Outlined</button>
+  <button class="spui-Button spui-Button--large spui-Button--contained">新規登録</button>
+  <button class="spui-Button spui-Button--large spui-Button--outlined">ログイン</button>
 </div>
   `}
 />
@@ -87,8 +87,8 @@ import { SubtleButton } from '../SubtleButton';
 <Preview withSource="open">
   <Story name="Row Direction with Medium Buttons">
     <ButtonGroup direction="row" size="medium">
-      <Button size="medium" variant="contained">Contained</Button>
-      <Button size="medium" variant="outlined">Outlined</Button>
+      <Button size="medium" variant="contained">新規登録</Button>
+      <Button size="medium" variant="outlined">ログイン</Button>
     </ButtonGroup>
   </Story>
 </Preview>
@@ -96,8 +96,8 @@ import { SubtleButton } from '../SubtleButton';
 <Source
   code={`
 <ButtonGroup direction="row" size="medium">
-  <Button size="medium" variant="contained">Contained</Button>
-  <Button size="medium" variant="outlined">Outlined</Button>
+  <Button size="medium" variant="contained">新規登録</Button>
+  <Button size="medium" variant="outlined">ログイン</Button>
 </ButtonGroup>
   `}
 />
@@ -106,8 +106,8 @@ import { SubtleButton } from '../SubtleButton';
   language='html'
   code={`
 <div class="spui-ButtonGroup spui-ButtonGroup--row spui-ButtonGroup--medium">
-  <button class="spui-Button spui-Button--medium spui-Button--contained">Contained</button>
-  <button class="spui-Button spui-Button--medium spui-Button--outlined">Outlined</button>
+  <button class="spui-Button spui-Button--medium spui-Button--contained">新規登録</button>
+  <button class="spui-Button spui-Button--medium spui-Button--outlined">ログイン</button>
 </div>
   `}
 />
@@ -117,8 +117,8 @@ import { SubtleButton } from '../SubtleButton';
 <Preview withSource="open">
   <Story name="Column Direction with Medium Buttons">
     <ButtonGroup direction="column" size="medium">
-      <Button size="medium" variant="contained">Contained</Button>
-      <Button size="medium" variant="outlined">Outlined</Button>
+      <Button size="medium" variant="contained">新規登録</Button>
+      <Button size="medium" variant="outlined">ログイン</Button>
     </ButtonGroup>
   </Story>
 </Preview>
@@ -126,8 +126,8 @@ import { SubtleButton } from '../SubtleButton';
 <Source
   code={`
 <ButtonGroup direction="column" size="medium">
-  <Button size="medium" variant="contained">Contained</Button>
-  <Button size="medium" variant="outlined">Outlined</Button>
+  <Button size="medium" variant="contained">新規登録</Button>
+  <Button size="medium" variant="outlined">ログイン</Button>
 </ButtonGroup>
   `}
 />
@@ -136,8 +136,8 @@ import { SubtleButton } from '../SubtleButton';
   language='html'
   code={`
 <div class="spui-ButtonGroup spui-ButtonGroup--column spui-ButtonGroup--medium">
-  <button class="spui-Button spui-Button--medium spui-Button--contained">Contained</button>
-  <button class="spui-Button spui-Button--medium spui-Button--outlined">Outlined</button>
+  <button class="spui-Button spui-Button--medium spui-Button--contained">新規登録</button>
+  <button class="spui-Button spui-Button--medium spui-Button--outlined">ログイン</button>
 </div>
   `}
 />
@@ -147,8 +147,8 @@ import { SubtleButton } from '../SubtleButton';
 <Preview withSource="open">
   <Story name="Row Direction with Small Buttons">
     <ButtonGroup direction="row" size="small">
-      <Button size="small" variant="contained">Contained</Button>
-      <Button size="small" variant="outlined">Outlined</Button>
+      <Button size="small" variant="contained">新規登録</Button>
+      <Button size="small" variant="outlined">ログイン</Button>
     </ButtonGroup>
   </Story>
 </Preview>
@@ -156,8 +156,8 @@ import { SubtleButton } from '../SubtleButton';
 <Source
   code={`
 <ButtonGroup direction="row" size="small">
-  <Button size="small" variant="contained">Contained</Button>
-  <Button size="small" variant="outlined">Outlined</Button>
+  <Button size="small" variant="contained">新規登録</Button>
+  <Button size="small" variant="outlined">ログイン</Button>
 </ButtonGroup>
   `}
 />
@@ -166,8 +166,8 @@ import { SubtleButton } from '../SubtleButton';
   language='html'
   code={`
 <div class="spui-ButtonGroup spui-ButtonGroup--row spui-ButtonGroup--small">
-  <button class="spui-Button spui-Button--small spui-Button--contained">Contained</button>
-  <button class="spui-Button spui-Button--small spui-Button--outlined">Outlined</button>
+  <button class="spui-Button spui-Button--small spui-Button--contained">新規登録</button>
+  <button class="spui-Button spui-Button--small spui-Button--outlined">ログイン</button>
 </div>
   `}
 />
@@ -177,8 +177,8 @@ import { SubtleButton } from '../SubtleButton';
 <Preview withSource="open">
   <Story name="Column Direction with Small Buttons">
     <ButtonGroup direction="column" size="small">
-      <Button size="small" variant="contained">Contained</Button>
-      <Button size="small" variant="outlined">Outlined</Button>
+      <Button size="small" variant="contained">新規登録</Button>
+      <Button size="small" variant="outlined">ログイン</Button>
     </ButtonGroup>
   </Story>
 </Preview>
@@ -186,8 +186,8 @@ import { SubtleButton } from '../SubtleButton';
 <Source
   code={`
 <ButtonGroup direction="column" size="small">
-  <Button size="small" variant="contained">Contained</Button>
-  <Button size="small" variant="outlined">Outlined</Button>
+  <Button size="small" variant="contained">新規登録</Button>
+  <Button size="small" variant="outlined">ログイン</Button>
 </ButtonGroup>
   `}
 />
@@ -196,8 +196,8 @@ import { SubtleButton } from '../SubtleButton';
   language='html'
   code={`
 <div class="spui-ButtonGroup spui-ButtonGroup--column spui-ButtonGroup--small">
-  <button class="spui-Button spui-Button--small spui-Button--contained">Contained</button>
-  <button class="spui-Button spui-Button--small spui-Button--outlined">Outlined</button>
+  <button class="spui-Button spui-Button--small spui-Button--contained">新規登録</button>
+  <button class="spui-Button spui-Button--small spui-Button--outlined">ログイン</button>
 </div>
   `}
 />
@@ -207,8 +207,8 @@ import { SubtleButton } from '../SubtleButton';
 <Preview withSource="open">
   <Story name="Column Direction with Large Subtle Button">
     <ButtonGroup direction="column" size="large">
-      <Button variant="contained">Contained</Button>
-      <SubtleButton size="large">Subtle Button</SubtleButton>
+      <Button variant="contained">申請する</Button>
+      <SubtleButton size="large">とじる</SubtleButton>
     </ButtonGroup>
   </Story>
 </Preview>
@@ -216,8 +216,8 @@ import { SubtleButton } from '../SubtleButton';
 <Source
   code={`
 <ButtonGroup direction="column" size="large">
-  <Button size="large" variant="contained">Contained</Button>
-  <SubtleButton size="large">Subtle Button</SubtleButton>
+  <Button size="large" variant="contained">申請する</Button>
+  <SubtleButton size="large">とじる</SubtleButton>
 </ButtonGroup>
   `}
 />
@@ -226,8 +226,8 @@ import { SubtleButton } from '../SubtleButton';
   language='html'
   code={`
 <div class="spui-ButtonGroup spui-ButtonGroup--column spui-ButtonGroup--large">
-  <button class="spui-Button spui-Button--large spui-Button--contained">Contained</button>
-  <button class="spui-SubtleButton spui-SubtleButton--large">Subtle Button</button>
+  <button class="spui-Button spui-Button--large spui-Button--contained">申請する</button>
+  <button class="spui-SubtleButton spui-SubtleButton--large">とじる</button>
 </div>
   `}
 />
@@ -237,8 +237,8 @@ import { SubtleButton } from '../SubtleButton';
 <Preview withSource="open">
   <Story name="Column Direction with Medium Subtle Button">
     <ButtonGroup direction="column" size="medium">
-      <Button size="medium" variant="contained">Contained</Button>
-      <SubtleButton size="medium">Subtle Button</SubtleButton>
+      <Button size="medium" variant="contained">申請する</Button>
+      <SubtleButton size="medium">とじる</SubtleButton>
     </ButtonGroup>
   </Story>
 </Preview>
@@ -246,8 +246,8 @@ import { SubtleButton } from '../SubtleButton';
 <Source
   code={`
 <ButtonGroup direction="column" size="medium">
-  <Button size="medium" variant="contained">Contained</Button>
-  <SubtleButton size="medium">Subtle Button</SubtleButton>
+  <Button size="medium" variant="contained">申請する</Button>
+  <SubtleButton size="medium">とじる</SubtleButton>
 </ButtonGroup>
   `}
 />
@@ -256,8 +256,8 @@ import { SubtleButton } from '../SubtleButton';
   language='html'
   code={`
 <div class="spui-ButtonGroup spui-ButtonGroup--column spui-ButtonGroup--medium">
-  <button class="spui-Button spui-Button--medium spui-Button--contained">Contained</button>
-  <button class="spui-SubtleButton spui-SubtleButton--medium">Subtle Button</button>
+  <button class="spui-Button spui-Button--medium spui-Button--contained">申請する</button>
+  <button class="spui-SubtleButton spui-SubtleButton--medium">とじる</button>
 </div>
   `}
 />
@@ -267,8 +267,8 @@ import { SubtleButton } from '../SubtleButton';
 <Preview withSource="open">
   <Story name="Column Direction with Small Subtle Button">
     <ButtonGroup direction="column" size="small">
-      <Button size="small" variant="contained">Contained</Button>
-      <SubtleButton size="small">Subtle Button</SubtleButton>
+      <Button size="small" variant="contained">申請する</Button>
+      <SubtleButton size="small">とじる</SubtleButton>
     </ButtonGroup>
   </Story>
 </Preview>
@@ -276,8 +276,8 @@ import { SubtleButton } from '../SubtleButton';
 <Source
   code={`
 <ButtonGroup direction="column" size="small">
-  <Button size="small" variant="contained">Contained</Button>
-  <SubtleButton size="small">Subtle Button</SubtleButton>
+  <Button size="small" variant="contained">申請する</Button>
+  <SubtleButton size="small">とじる</SubtleButton>
 </ButtonGroup>
   `}
 />
@@ -286,8 +286,8 @@ import { SubtleButton } from '../SubtleButton';
   language='html'
   code={`
 <div class="spui-ButtonGroup spui-ButtonGroup--column spui-ButtonGroup--small">
-  <button class="spui-Button spui-Button--small spui-Button--contained">Contained</button>
-  <button class="spui-SubtleButton spui-SubtleButton--small">Subtle Button</button>
+  <button class="spui-Button spui-Button--small spui-Button--contained">申請する</button>
+  <button class="spui-SubtleButton spui-SubtleButton--small">とじる</button>
 </div>
   `}
 />
