--- a/packages/spindle-ui/src/Form/InputLabel.stories.mdx
+++ b/packages/spindle-ui/src/Form/InputLabel.stories.mdx
@@ -24,19 +24,19 @@ import { InputLabel } from './InputLabel';
 
 <Preview withSource="open">
   <Story name="Input Label">
-    <InputLabel id="interest">Your Interest</InputLabel>
+    <InputLabel id="comment">コメントを入力</InputLabel>
   </Story>
 </Preview>
 
 <Source
   code={`
-<InputLabel id="interest">Your Interest</InputLabel>
+<InputLabel id="comment">コメントを入力</InputLabel>
   `}
 />
 
 <Source
   language='html'
   code={`
-<label class="spui-InputLabel" for="interest">Your Interest</label>
+<label class="spui-InputLabel" for="comment">コメントを入力</label>
   `}
 />
