--- a/packages/spindle-ui/src/Form/InlineDropDown.stories.mdx
+++ b/packages/spindle-ui/src/Form/InlineDropDown.stories.mdx
@@ -33,23 +33,23 @@ InlineDropDownは試験的なコンポーネントであるため、破壊的な
 <Preview withSource="open">
   <Story name="Medium">
     <InlineDropDown
-      aria-label="Fruits"
-      name="fruits"
+      aria-label="期間を選択"
+      name="term"
       {...actions('onClick', 'onChange', 'onInput', 'onFocus', 'onBlur')}
     >
-      <option value="apple">Apple</option>
-      <option value="green-apple">Green Apple</option>
-      <option value="melon">Melon</option>
+      <option value="today">今日</option>
+      <option value="seven_days">7日間</option>
+      <option value="thirty_days">30日間</option>
     </InlineDropDown>
   </Story>
 </Preview>
 
 <Source
   code={`
-<InlineDropDown aria-label="Fruits" name="fruits">
-  <option value="apple">Apple</option>
-  <option value="orange">Orange</option>
-  <option value="melon">Melon</option>
+<InlineDropDown aria-label="期間を選択" name="term">
+  <option value="today">今日</option>
+  <option value="seven_days">7日間</option>
+  <option value="thirty_days">30日間</option>
 </InlineDropDown>
 `}
 />
@@ -59,14 +59,14 @@ InlineDropDownは試験的なコンポーネントであるため、破壊的な
   code={`
 <label class="spui-InlineDropDown-label is-active">
   <span class="spui-InlineDropDown-visual">
-    <span class="spui-InlineDropDown-text spui-InlineDropDown-text--medium">Apple</span>
+    <span class="spui-InlineDropDown-text spui-InlineDropDown-text--medium">今日</span>
     <span class="spui-InlineDropDown-icon spui-InlineDropDown-icon--medium"><svg/></span>
   </span>
-  <select class="spui-InlineDropDown-select spui-InlineDropDown-select--medium" aria-label="Fruits" name="fruits"
+  <select class="spui-InlineDropDown-select spui-InlineDropDown-select--medium" aria-label="期間を選択" name="term"
   >
-    <option value="apple">Apple</option>
-    <option value="green-apple">Green Apple</option>
-    <option value="melon">Melon</option>
+    <option value="today">今日</option>
+    <option value="seven_days">7日間</option>
+    <option value="thirty_days">30日間</option>
   </select>
   <span class="spui-InlineDropDown-outline"></span>
 </label>
@@ -79,23 +79,23 @@ InlineDropDownは試験的なコンポーネントであるため、破壊的な
   <Story name="Small">
     <InlineDropDown
       visualSize="small"
-      aria-label="Fruits"
-      name="fruits"
+      aria-label="期間を選択"
+      name="term"
       {...actions('onClick', 'onChange', 'onInput', 'onFocus', 'onBlur')}
     >
-      <option value="apple">Apple</option>
-      <option value="green-apple">Green Apple</option>
-      <option value="melon">Melon</option>
+      <option value="today">今日</option>
+      <option value="seven_days">7日間</option>
+      <option value="thirty_days">30日間</option>
     </InlineDropDown>
   </Story>
 </Preview>
 
 <Source
   code={`
-<InlineDropDown visualSize="small" aria-label="Fruits" name="fruits">
-  <option value="apple">Apple</option>
-  <option value="orange">Orange</option>
-  <option value="melon">Melon</option>
+<InlineDropDown visualSize="small" aria-label="期間を選択" name="term">
+  <option value="today">今日</option>
+  <option value="seven_days">7日間</option>
+  <option value="thirty_days">30日間</option>
 </InlineDropDown>
 `}
 />
@@ -105,14 +105,14 @@ InlineDropDownは試験的なコンポーネントであるため、破壊的な
   code={`
 <label class="spui-InlineDropDown-label is-active">
   <span class="spui-InlineDropDown-visual">
-    <span class="spui-InlineDropDown-text spui-InlineDropDown-text--small">Apple</span>
+    <span class="spui-InlineDropDown-text spui-InlineDropDown-text--small">今日</span>
     <span class="spui-InlineDropDown-icon spui-InlineDropDown-icon--small"><svg/></span>
   </span>
-  <select class="spui-InlineDropDown-select spui-InlineDropDown-select--small" aria-label="Fruits" name="fruits"
+  <select class="spui-InlineDropDown-select spui-InlineDropDown-select--small" aria-label="期間を選択" name="term"
   >
-    <option value="apple">Apple</option>
-    <option value="green-apple">Green Apple</option>
-    <option value="melon">Melon</option>
+    <option value="today">今日</option>
+    <option value="seven_days">7日間</option>
+    <option value="thirty_days">30日間</option>
   </select>
   <span class="spui-InlineDropDown-outline"></span>
 </label>
@@ -127,10 +127,10 @@ InlineDropDownは試験的なコンポーネントであるため、破壊的な
 
 <Source
   code={`
-<InlineDropDown aria-label="Fruits" id="fruits-selection" name="fruits" placeholder="Fruits">
-  <option value="apple">Apple</option>
-  <option value="orange">Orange</option>
-  <option value="melon">Melon</option>
+<InlineDropDown aria-label="期間を選択" id="term-selection" name="term" placeholder="期間を選択">
+  <option value="today">今日</option>
+  <option value="seven_days">7日間</option>
+  <option value="thirty_days">30日間</option>
 </InlineDropDown>
   `}
 />
@@ -138,11 +138,11 @@ InlineDropDownは試験的なコンポーネントであるため、破壊的な
 <Source
   code={`
 <>
-  <InputLabel id="fruits-selection">Fruits</InputLabel>
-  <InlineDropDown id="fruits-selection" name="fruits" placeholder="Fruits">
-    <option value="apple">Apple</option>
-    <option value="orange">Orange</option>
-    <option value="melon">Melon</option>
+  <InputLabel id="term-selection">期間を選択</InputLabel>
+  <InlineDropDown id="term-selection" name="term" placeholder="期間を選択">
+    <option value="today">今日</option>
+    <option value="seven_days">7日間</option>
+    <option value="thirty_days">30日間</option>
   </InlineDropDown>
 </>
   `}
