--- a/packages/spindle-ui/src/Form/Radio.stories.mdx
+++ b/packages/spindle-ui/src/Form/Radio.stories.mdx
@@ -25,21 +25,21 @@ import { Radio } from './Radio';
 
 <Preview withSource="open">
   <Story name="Radio">
-    <Radio aria-label="asia" id="asia" name="area" {...actions('onClick', 'onChange', 'onInput', 'onFocus', 'onBlur')} />
+    <Radio aria-label="Amebaブログ" id="normal" name="blog" {...actions('onClick', 'onChange', 'onInput', 'onFocus', 'onBlur')} />
   </Story>
 </Preview>
 
 <Source
   code={`
-<Radio aria-label="asia" id="asia" name="area" />
+<Radio aria-label="Amebaブログ" id="normal" name="blog" />
   `}
 />
 
 <Source
   language='html'
   code={`
-<label class="spui-Radio-label" for="asia">
-  <input aria-label="asia" class="spui-Radio-input" id="asia" type="radio" name="area">
+<label class="spui-Radio-label" for="normal">
+  <input aria-label="Amebaブログ" class="spui-Radio-input" id="normal" type="radio" name="blog">
   <span class="spui-Radio-icon"></span>
   <span class="spui-Radio-outline"></span>
 </label>
@@ -50,21 +50,21 @@ import { Radio } from './Radio';
 
 <Preview withSource="open">
   <Story name="Radio Disabled">
-    <Radio  aria-label="asia" disabled id="asiaDisabled" name="asia" />
+    <Radio aria-label="Amebaブログ" disabled id="disabled" name="blog" />
   </Story>
 </Preview>
 
 <Source
   code={`
-<Radio  aria-label="asia" disabled id="asia" name="area" />
+<Radio aria-label="Amebaブログ" disabled id="disabled" name="blog" />
   `}
 />
 
 <Source
   language='html'
   code={`
-<label class="spui-Radio-label" for="asia">
-  <input aria-label="asia" class="spui-Radio-input" disabled id="asia" type="radio" name="area">
+<label class="spui-Radio-label" for="disabled">
+  <input aria-label="Amebaブログ" class="spui-Radio-input" disabled id="disabled" type="radio" name="blog">
   <span class="spui-Radio-icon"></span>
   <span class="spui-Radio-outline"></span>
 </label>
@@ -75,24 +75,24 @@ import { Radio } from './Radio';
 
 <Preview withSource="open">
   <Story name="Radio With Text">
-    <Radio id="asiaWithText" name="area" {...actions('onClick', 'onChange', 'onInput', 'onFocus', 'onBlur')}>Asia</Radio>
+    <Radio id="withText" name="blog" {...actions('onClick', 'onChange', 'onInput', 'onFocus', 'onBlur')}>Amebaブログ</Radio>
   </Story>
 </Preview>
 
 <Source
   code={`
-<Radio id="asiaWithText" name="area">Asia</Radio>
+<Radio id="withText" name="blog">Amebaブログ</Radio>
   `}
 />
 
 <Source
   language='html'
   code={`
-<label class="spui-Radio-label" for="asia">
-  <input class="spui-Radio-input" id="asiaWithText" type="radio" name="area">
+<label class="spui-Radio-label" for="withText">
+  <input class="spui-Radio-input" id="withText" type="radio" name="blog">
   <span class="spui-Radio-icon"></span>
   <span class="spui-Radio-outline"></span>
-  <span class="spui-Radio-text">Asia</span>
+  <span class="spui-Radio-text">Amebaブログ</span>
 </label>
   `}
 />
