--- a/packages/spindle-ui/src/Form/TextField.stories.mdx
+++ b/packages/spindle-ui/src/Form/TextField.stories.mdx
@@ -25,20 +25,20 @@ import { TextField } from './TextField';
 
 <Preview withSource="open">
   <Story name="Large">
-    <TextField aria-label="Text field" id="TextField" placeholder="How are you feeling?" variant="large" {...actions('onClick', 'onChange', 'onInput', 'onFocus', 'onBlur')} />
+    <TextField id="TextField" placeholder="ameba-blog" variant="large" {...actions('onClick', 'onChange', 'onInput', 'onFocus', 'onBlur')} />
   </Story>
 </Preview>
 
 <Source
   code={`
-<TextField aria-label="Text field" id="TextField" variant="large" />
+<TextField placeholder="ameba-blog" id="TextField" variant="large" />
   `}
 />
 
 <Source
   language='html'
   code={`
-<input aria-label="Text field" class="spui-TextField spui-TextField--large" id="TextField" />
+<input placeholder="ameba-blog" class="spui-TextField spui-TextField--large" id="TextField" />
   `}
 />
 
@@ -46,20 +46,20 @@ import { TextField } from './TextField';
 
 <Preview withSource="open">
   <Story name="Large With Error">
-    <TextField aria-label="Text field" hasError id="TextFieldWithError" variant="large" {...actions('onClick', 'onChange', 'onInput', 'onFocus', 'onBlur')} />
+    <TextField placeholder="ameba-blog" hasError id="TextFieldWithError" variant="large" {...actions('onClick', 'onChange', 'onInput', 'onFocus', 'onBlur')} />
   </Story>
 </Preview>
 
 <Source
   code={`
-<TextField aria-label="Text field" hasError id="TextFieldWithError" variant="large" />
+<TextField placeholder="ameba-blog" hasError id="TextFieldWithError" variant="large" />
   `}
 />
 
 <Source
   language='html'
   code={`
-<input aria-label="Text field" class="spui-TextField spui-TextField--large is-error" id="TextFieldWithError" />
+<input placeholder="ameba-blog" class="spui-TextField spui-TextField--large is-error" id="TextFieldWithError" />
   `}
 />
 
@@ -67,20 +67,20 @@ import { TextField } from './TextField';
 
 <Preview withSource="open">
   <Story name="Medium">
-    <TextField aria-label="Text field" id="TextField" placeholder="How are you feeling?" variant="medium" {...actions('onClick', 'onChange', 'onInput', 'onFocus', 'onBlur')} />
+    <TextField placeholder="ameba-blog" id="TextField" variant="medium" {...actions('onClick', 'onChange', 'onInput', 'onFocus', 'onBlur')} />
   </Story>
 </Preview>
 
 <Source
   code={`
-<TextField aria-label="Text field" id="TextField" variant="medium" />
+<TextField placeholder="ameba-blog" id="TextField" variant="medium" />
   `}
 />
 
 <Source
   language='html'
   code={`
-<input aria-label="Text field" class="spui-TextField spui-TextField--medium" id="TextField" />
+<input placeholder="ameba-blog" class="spui-TextField spui-TextField--medium" id="TextField" />
   `}
 />
 
@@ -88,19 +88,19 @@ import { TextField } from './TextField';
 
 <Preview withSource="open">
   <Story name="Medium With Error">
-    <TextField aria-label="Text field" hasError id="TextFieldWithError" variant="medium" {...actions('onClick', 'onChange', 'onInput', 'onFocus', 'onBlur')} />
+    <TextField placeholder="ameba-blog" hasError id="TextFieldWithError" variant="medium" {...actions('onClick', 'onChange', 'onInput', 'onFocus', 'onBlur')} />
   </Story>
 </Preview>
 
 <Source
   code={`
-<TextField aria-label="Text field" hasError id="TextFieldWithError" variant="medium" />
+<TextField placeholder="ameba-blog" hasError id="TextFieldWithError" variant="medium" />
   `}
 />
 
 <Source
   language='html'
   code={`
-<input aria-label="Text field" class="spui-TextField spui-TextField--medium is-error" id="TextFieldWithError" />
+<input placeholder="ameba-blog" class="spui-TextField spui-TextField--medium is-error" id="TextFieldWithError" />
   `}
 />
