--- a/packages/spindle-ui/src/SubtleButton/SubtleButton.stories.mdx
+++ b/packages/spindle-ui/src/SubtleButton/SubtleButton.stories.mdx
@@ -25,20 +25,20 @@ import { SubtleButton } from './SubtleButton';
 
 <Preview withSource="open">
   <Story name="Large">
-    <SubtleButton size="large" {...actions('onClick', 'onMouseOver')}>Subtle Button</SubtleButton>
+    <SubtleButton size="large" {...actions('onClick', 'onMouseOver')}>とじる</SubtleButton>
   </Story>
 </Preview>
 
 <Source
   code={`
-<SubtleButton size="large">Subtle Button</SubtleButton>
+<SubtleButton size="large">とじる</SubtleButton>
   `}
 />
 
 <Source
   language='html'
   code={`
-<button class="spui-SubtleButton spui-SubtleButton--large">Subtle Button</button>
+<button class="spui-SubtleButton spui-SubtleButton--large">とじる</button>
   `}
 />
 
@@ -46,20 +46,20 @@ import { SubtleButton } from './SubtleButton';
 
 <Preview withSource="open">
   <Story name="Medium">
-    <SubtleButton size="medium" {...actions('onClick', 'onMouseOver')}>Subtle Button</SubtleButton>
+    <SubtleButton size="medium" {...actions('onClick', 'onMouseOver')}>とじる</SubtleButton>
   </Story>
 </Preview>
 
 <Source
   code={`
-<SubtleButton size="medium">Subtle Button</SubtleButton>
+<SubtleButton size="medium">とじる</SubtleButton>
   `}
 />
 
 <Source
   language='html'
   code={`
-<button class="spui-SubtleButton spui-SubtleButton--medium">Subtle Button</button>
+<button class="spui-SubtleButton spui-SubtleButton--medium">とじる</button>
   `}
 />
 
@@ -67,19 +67,19 @@ import { SubtleButton } from './SubtleButton';
 
 <Preview withSource="open">
   <Story name="Small">
-    <SubtleButton size="Small" {...actions('onClick', 'onMouseOver')}>Subtle Button</SubtleButton>
+    <SubtleButton size="Small" {...actions('onClick', 'onMouseOver')}>とじる</SubtleButton>
   </Story>
 </Preview>
 
 <Source
   code={`
-<SubtleButton size="small">Subtle Button</SubtleButton>
+<SubtleButton size="small">とじる</SubtleButton>
   `}
 />
 
 <Source
   language='html'
   code={`
-<button class="spui-SubtleButton spui-SubtleButton--small">Subtle Button</button>
+<button class="spui-SubtleButton spui-SubtleButton--small">とじる</button>
   `}
 />
